--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <script type="module" defer src="./index.js"></script>
     <script type="module" defer src="./components/nav/nav.js"></script>
     <title>Document</title>
+    <link rel="stylesheet" href="./styles/style.css">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
     
+
+
 </body>
 </html>
